<resources>
    <string name="app_name">UBuyISmile</string>
    <string name="u_buy">U Buy I Smile</string>
    <string name="creators">Leonard Tatum &amp; Jeremy Garcia</string>
    <string name="welcome">Welcome</string>

    <!-- labels -->
    <string name="free">FREE</string>
    <string name="not_available">--</string>
    <string name="no_items">Sorry, we currently have no items for this category. For feedback or
        support, contact\n Leonard Tatum at <a href="mailto:ljtatum@hotmail.com">ljtatum@hotmail.com</a></string>
    <string name="default_description_amazon">Have some items you want added? Contact Leonard Tatum at
        <a href="mailto:ljtatum@hotmail.com">ljtatum@hotmail.com</a> and he will get right on it!</string>
    <string name="default_description_chablee">For more information and details, go to www.chablee.com</string>
    <string name="holiday_date_range">Available %1$s - %2$s</string>

    <!-- loading Amazon -->
    <string name="loading_amazon_items_01">Finding the best Amazon products for you&#8230;</string>
    <string name="loading_amazon_items_02">Speaking with Amazon execs and demanding only the best quality products&#8230;</string>
    <string name="loading_amazon_items_03">Negotiating the cheapest prices and most amazing deals with Amazon. Stay tuned&#8230;</string>

    <!-- loading Chablee -->
    <string name="loading_chablee_items_01">Finding the best quality jewelry from the Chablee collection&#8230;</string>
    <string name="loading_chablee_items_02">Putting on our shades. Cool jewelry shining so bright&#8230;</string>
    <string name="loading_chablee_items_03">Waiting and watching Chablee handcraft each jewelry piece. Such mastery&#8230;</string>

    <!-- search -->
    <string name="search_history">Search History</string>
    <string name="item_details">Item Details</string>
    <string name="no_item_found">No Item Found</string>

    <!-- share -->
    <string name="share_option_a">Thinking about buying this. Any thoughts?</string>
    <string name="share_option_b">Hey, take a look at what I found!</string>
    <string name="share_option_c">Found this amazing item, what do you think?</string>

    <!-- adapter -->
    <string name="percent_sale">-%1$s\%%</string>
    <string name="dollar_format">$%1$s</string>

    <!-- favorite -->
    <string name="favorite">Favorite</string>
    <string name="favorite_item">Favorite Item!</string>
    <string name="no_favorite_item">No favorite items</string>
    <string name="remove">Remove</string>

    <!-- item details -->
    <string name="buy">Buy</string>
    <string name="page_indicator">%1$d of %2$d</string>
    <string name="sorry_unable_retrieve_item">Sorry, we are unable to retrieve this item for you.
        For feedback or support, contact Leonard Tatum at
		<a href="mailto:ljtatum@hotmail.com">ljtatum@hotmail.com</a></string>

    <!-- about -->
    <string name="follow_me">Follow Me:</string>
    <string name="copyright_year">Copyright %s, Leonard Tatum. All Rights Reserved.</string>
    <string name="about_desc">This app is 100\% free, created for the education, convenience
		and use of the public. There will never be in-app purchases or alternative paid versions
		of the app. To learn about other apps Leonard Tatum is working on, connect with him on social
		media or send him an email with your questions or comments. Cheers!</string>
    <string name="feedback_email">For feedback or support, contact\n Leonard Tatum at
		<a href="mailto:ljtatum@hotmail.com">ljtatum@hotmail.com</a></string>

    <!-- privacy -->
    <string name="privacy_desc">Leonard Tatum is committed to protecting your privacy and
	providing the best user experience possible. This is why data collected will never be sold
	or traded to others. \n\nInformation collected may be used to (i) remember information so
	you will not have to re-enter it during your session or the next sessions you are using the
	Service (ii) provide personalize content and information to you and others, which could
	include online ads or other forms or marketing (iii) provide, improve, test and monitor the
	effectiveness of our Service (iv) develop and test new products and features (v) diagnose or
	fix bugs and issues.</string>

    <!-- navigation drawer accessibility options -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- menu header -->
    <string name="menu_header_information">Information</string>
    <string name="menu_header_goods">Goods</string>

    <!-- menu options -->
    <string name="menu_amazon">Amazon</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_search">Search</string>
    <string name="menu_all_goods_deals">All Goods Deals</string>
    <string name="menu_quick_search_books">Quick Search Books</string>
    <string name="menu_quick_search_electronics">Quick Search Electronics</string>
    <string name="menu_quick_search_food">Quick Search Food</string>
    <string name="menu_quick_search_health_beauty">Quick Search Health &amp; Beauty</string>
    <string name="menu_quick_search_movies">Quick Search Movies</string>
    <string name="menu_quick_search_video_games">Quick Search Video Games</string>
    <string name="menu_quick_search_chablee">Quick Search Chablee</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy">Privacy</string>

    <!-- menu header Chablee -->
    <string name="menu_header_chablee">Chablee\'s Handmade Jewelry</string>

    <!-- menu options Chablee -->
    <string name="menu_crowns">Gemstone Crowns</string>
    <string name="menu_rings">Rings</string>
    <string name="menu_necklaces">Necklaces &amp; Body Chains</string>
    <string name="menu_rocks">Rocks</string>

    <!-- messages : neutral -->
    <string name="neutral_01">Hi, my name is L. Keep me happy by purchasing any items you wish. You buy, I smile!</string>
    <string name="neutral_02">L wants to know what you will buy?</string>
    <string name="neutral_03">L is curious about what you will buy?</string>
    <string name="neutral_04">Did you know that all money from Chablee purchases go toward a good cause?
        L is very charitable.</string>
    <string name="neutral_05">L suggests checking out some amazing Rings personally handmade by Chablee.</string>
    <string name="neutral_06">L suggests checking out some amazing Necklaces personally handmade by Chablee.</string>
    <string name="neutral_07">L suggests checking out some amazing Crowns personally handmade by Chablee.</string>
    <string name="neutral_08">L suggests checking out some amazing Rocks personally handmade by Chablee.</string>
    <string name="neutral_09">L suggests checking out some amazing Body Chains personally handmade by Chablee.</string>

    <!-- messages : happy -->
    <string name="happy_01">L is very happy today.</string>
    <string name="happy_02">L is in good spirits!</string>
    <string name="happy_03">L can\'t stop smiling because of you.</string>
    <string name="happy_04">L just became happier.</string>
    <string name="happy_05">L is rooting for you!</string>

    <!-- messages : unhappy -->
    <string name="unhappy_01">L is a sad Panda.</string>
    <string name="unhappy_02">L misses you. Where have you been?</string>
    <string name="unhappy_03">L is disappointed.</string>
    <string name="unhappy_04">L wants to know if you will purchase anything?</string>

    <!-- messages : yes/no -->
    <string name="yes_no_01">All money from Chablee purchases go toward a good cause!
        Check out Chablee items?</string>
    <string name="yes_no_02">L wants to know if you are in a good mood?</string>
    <string name="yes_no_03">L likes that you are searching for items. Did you find what you were looking for?</string>
    <string name="yes_no_04">Are there any items you want added to the app?</string>
    <string name="yes_no_05">Are there any items you wish to add?</string>

    <!-- error messages -->
    <string name="default_error_message">Sorry, we\'re having trouble connecting to our servers.
        Please check your connection and try again later.</string>

    <!-- dialog -->
    <string name="yes">yes</string>
    <string name="no">no</string>

    <!-- daily bonus -->
    <string name="signin_bonus">Signin Bonus</string>
    <string name="reward_earned">%s Day Reward Earned!</string>
    <string name="more_deals_items">More deals &amp; items!</string>
    <string name="signin_bonus_info">Earn more items and more deals by visiting the UBuyISmile app</string>
    <string name="cool_beans">Cool Beans</string>

    <!-- push noifications -->
    <string name="default_notification_message">Sending you good vibes and well wishes! Thanks for using our app!!</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <!-- holiday titles -->
    <string name="new_year_title">Happy New Years Sale</string>
    <string name="martin_luther_king_title">Martin Luther King Celebration</string>
    <string name="valentine_day_title">Valentine Day Discounts</string>
    <string name="labor_day_title">Labor Day Sale</string>
    <string name="black_friday_title">Black Friday Clearance</string>
    <string name="green_monday_title">Green Monday Sale</string>
    <string name="christmas_title">Xmas Discounts</string>

    <!-- holiday messages -->
    <string name="new_year_message_a">Happiness and success is my wish for you this year.</string>
    <string name="martin_luther_king_message_a">Nothing in all the world is more dangerous than sincere ignorance and conscientious stupidity.</string>
    <string name="valentine_day_message_a">Buy your loved ones something sweet and special.</string>
    <string name="labor_day_message_a">Find big savings under the deals section!</string>
    <string name="black_friday_message_a">Everything is cheap, cheap, cheap this time of the year.</string>
    <string name="green_monday_message_a">Not sure this is really a holiday. But lets celebrate Capitalism anyway. Cheers!</string>
    <string name="christmas_message_a">Jingle bells, jingle bells, jingle all the way!</string>

    <string name="new_year_message_b">Happy New Years! And remember, we become what we think about. Lets be happy and positive all year round.</string>
    <string name="martin_luther_king_message_b">We are not makers of history. We are made by history.</string>
    <string name="valentine_day_message_b">Buy your loved ones something thoughtful this year.</string>
    <string name="labor_day_message_b">Everything must go! Check out the deals section.</string>
    <string name="black_friday_message_b">These may be the lowest prices and greatest deals all year!</string>
    <string name="green_monday_message_b">Green Monday is the second biggest day for online holiday shopping. True story!</string>
    <string name="christmas_message_b">Tis the season to be jolly!</string>

</resources>
