<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- splash icon -->
    <ImageView
        android:id="@+id/iv_splash_icon"
        android:layout_width="@dimen/scaling_140"
        android:layout_height="@dimen/scaling_140"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/happiness_80_04" />

    <!-- app title -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_splash_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/scaling_10"
        android:text="@string/u_buy"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_30" />

    <!-- divider -->
    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/tv_title"
        android:layout_marginBottom="@dimen/scaling_10"
        android:layout_marginEnd="@dimen/scaling_60"
        android:layout_marginStart="@dimen/scaling_60"
        android:layout_marginTop="@dimen/scaling_10"
        android:background="@color/black" />

    <!-- authors -->
    <TextView
        android:id="@+id/tv_authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_divider"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/creators"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_20" />

    <LinearLayout
        android:layout_below="@+id/tv_authors"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <!-- progress bar -->
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- progress text -->
        <TextView
            android:gravity="center_horizontal"
            android:id="@+id/tv_progress"
            android:visibility="invisible"
            android:textStyle="bold"
            android:paddingStart="@dimen/scaling_24"
            android:paddingEnd="@dimen/scaling_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/scaling_300"
        android:background="@drawable/triangle"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/scaling_50"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_30" />

    </LinearLayout>

</RelativeLayout>