<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/scaling_60"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fl_cra_wrapper"
        android:background="@drawable/daily_bonus_bg">

        <!-- top info -->
        <LinearLayout
            android:id="@+id/ll_info_wrapper"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scaling_135"
            android:orientation="horizontal"
            android:padding="@dimen/scaling_20">

            <include
                android:id="@+id/item_bonus_info"
                layout="@layout/item_signin_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/scaling_10"
                android:orientation="vertical">

                <!-- title -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signin_bonus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_24" />

                <!-- reward earned -->
                <TextView
                    android:id="@+id/tv_reward_earned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reward_earned"
                    android:textColor="@color/material_amber_500_color_code"
                    android:textSize="@dimen/font_size_18"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ll_info_wrapper"
            android:background="@color/white"
            android:padding="@dimen/scaling_20">

            <!-- reward earned -->
            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin_bonus_info"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_20"
                android:textStyle="bold" />

            <!-- row 1: Days 1 - 3 -->
            <LinearLayout
                android:id="@+id/ll_row_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_desc"
                android:layout_marginTop="@dimen/scaling_40"
                android:orientation="horizontal"
                android:weightSum="1">

                <!-- day 1 -->
                <include
                    android:id="@+id/item_day_one"
                    layout="@layout/item_signin_bonus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".33" />

                <!-- day 2 -->
                <include
                    android:id="@+id/item_day_two"
                    layout="@layout/item_signin_bonus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".34" />

                <!-- day 3 -->
                <include
                    android:id="@+id/item_day_three"
                    layout="@layout/item_signin_bonus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".33" />

            </LinearLayout>

            <!-- row 2: Days 4 - 7 -->
            <LinearLayout
                android:id="@+id/ll_row_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_row_one"
                android:layout_marginTop="@dimen/scaling_20"
                android:orientation="horizontal"
                android:weightSum="1">

                <!-- day 4 -->
                <include
                    android:id="@+id/item_day_four"
                    layout="@layout/item_signin_bonus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".33" />

                <!-- day 5 -->
                <include
                    android:id="@+id/item_day_five"
                    layout="@layout/item_signin_bonus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".34" />

                <!-- day 6 -->
                <include
                    android:id="@+id/item_day_six"
                    layout="@layout/item_signin_bonus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".33" />

            </LinearLayout>

            <!-- row 3: Days 7 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_row_two"
                android:layout_marginTop="@dimen/scaling_20"
                android:orientation="horizontal">

                <!-- day 7 -->
                <include
                    android:id="@+id/item_day_seven"
                    layout="@layout/item_signin_bonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/scaling_20"
                    android:gravity="center_vertical"
                    android:text="@string/more_deals_items"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_22" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_cra_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/scaling_20"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <!-- cta -->
        <TextView
            android:id="@+id/tv_cta"
            android:layout_width="match_parent"
            android:layout_height="@dimen/scaling_60"
            android:background="@drawable/pill_blue_rad0"
            android:gravity="center"
            android:text="@string/cool_beans"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18" />

    </FrameLayout>

</RelativeLayout>